# EC601-IoT-Security

./: .gitignore  Gemfile  Makefile  README.md  _config-dev.yml  _config.yml
Project 1 - Product Research/: IoT_Security.md  Makefile
_bibliography/: IoT_Security.bib  Societal_Impact.bib
_code/Project-2/: .env.example  .gitignore  .pylintrc  Makefile  README.md  UserStories.md  pyproject.toml  redis.conf  requirements.txt
_code/Project-2/applications/: api.py  classify_user_tweets.py  discover_users.py
_code/Project-2/applications/web_client/: api.py
_code/Project-2/applications/web_client/static/: app.js
_code/Project-2/applications/web_client/templates/: index.html
_code/Project-2/ec601_proj2/: __init__.py  google_nlp.py  models.py  twitter_utils.py  workers.py
_code/Project-2/redis_data/: README.md
_code/Project-2/scripts/: README.md  classify_twitter_user.py  nlp_cli.py  redis_client.py  tweet_counts.py  tweet_home_timeline.py  tweet_search.py  tweet_sentiment.py
_code/Project-2/tests/: redis_template.conf  test_database_models.py  test_workers.py
_includes/: page__meta.html
_posts/: 2021-09-18-iot-security.markdown  2021-09-19-iot-security.markdown  2021-10-08-twitter-classification-pipeline.markdown  2021-12-04-iot-societal-impact.markdown
assets/css/: styles.scss
docs/: 404.html  README.md  feed.xml  index.html  robots.txt  sitemap.xml
docs/2021/09/18/: iot-security.html
docs/Project 1 - Product Research/: IoT_Security.md  IoT_Security_Notes.md
docs/about/: index.html
docs/assets/css/: main.css.map  styles.css  styles.css.map
(+6 files in other folders)
