[tool.poetry]
name = "project-2"
version = "0.1.0"
description = ""
authors = ["Rossi, Joe <josephr@bu.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
google-cloud-language = "^2.2.2"
python-dotenv = "^0.19.0"
requests = "^2.26.0"
dateparser = "^1.0.0"
requests-oauthlib = "^1.3.0"
TwitterAPI = { git = "https://github.com/musicist288/TwitterAPI.git", branch="master" }
redis = "^3.5.3"
peewee = "^3.14.4"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
